add safety-mirror and overloaded factory methods to accept Method References