@@ -70,6 +70,11 @@ Copyright 2016 Anders Granau Høfft
 			<artifactId>javax.annotation-api</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.hervian</groupId>
+			<artifactId>safety-mirror</artifactId>
+			<version>3.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -84,10 +89,16 @@ Copyright 2016 Anders Granau Høfft
 						<!-- phase and goal is inherited from the super pom for the default-compile (and are compile) -->
 						<configuration>
 							<compilerArgument>-proc:none</compilerArgument>
+							<compilerArgs>
+								<arg>--add-modules</arg>
+								<arg>safety.mirror</arg>
+								<arg>-proc:none</arg>
+							</compilerArgs>
 							<includes>
 								<include>com/github/hervian/lambdas/util/MethodParameter.java</include>
 								<include>com/github/hervian/lambdas/util/GenerateLambda.java</include>
 								<include>com/github/hervian/lambdas/util/GenerateLambdaProcessor.java</include>
+								<include>module-info.java</include>
 							</includes>
 						</configuration>
 					</execution>
@@ -98,12 +109,19 @@ Copyright 2016 Anders Granau Høfft
 							<goal>compile</goal>
 						</goals>
 						<configuration>
+						<annotationProcessorPaths>
+							<path>
+								<groupId>${project.groupId}</groupId>
+								<artifactId>lambda-factory</artifactId>
+								<version>2.0.2</version>
+							</path>
+						</annotationProcessorPaths>
 							<annotationProcessors>
 								<annotationProcessor>com.github.hervian.lambdas.util.GenerateLambdaProcessor</annotationProcessor>
 							</annotationProcessors>
-							<!-- <generatedSourcesDirectory>default is ${project.build.directory}/generated-sources/annotations</generatedSourcesDirectory> -->
 							<includes>
 								<include>com/github/hervian/lambdas/util/GenerateLambdaMarkerClass.java</include>
+								<include>module-info.java</include>
 							</includes>
 						</configuration>
 					</execution>
